--- a/examen /ExamenRecu.css
+++ b/examen /ExamenRecu.css
@@ -40,9 +40,5 @@ header{
 }
 
 body{
-    background-color: azure;
-}
-
-#salida6{
-    color: rgba(201, 44, 44, 0.829);
+    background-color:mediumpurple;
 }
